Update APIs to provide multi-entity support
